# webapp-rs

./: .env  Cargo.toml  docker-compose.yml
migrations/2019-09-24-164932_create_users/: up.sql
src/: infra.rs  logic.rs  main.rs  web.rs
src/infra/: db.rs  jwt_handler.rs  key_pair_generator.rs
src/infra/db/: connection.rs  user_repository.rs
src/initializer/: init.rs
src/logic/: login.rs
src/logic/login/: jwt_handler.rs  login_service.rs  token.rs  user.rs
src/logic/repository/: user.rs
src/table/: user.rs
src/web/: init.rs
src/web/init/: init.rs
