[package]
name = "webapp"
version = "0.1.0"
authors = ["irieryota <ryotairie123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = ""
frank_jwt = ""
ring = ""
serde = ""
serde_json = ""
diesel = { version = "1.4.2", features = ["mysql","r2d2"] }
dotenv = "0.9.0"
r2d2 = ""